fixed the fucking dashboard alignment

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -4,10 +4,10 @@
 
 #dashboard_wrapper{
   position: absolute;
-  left: 340px;
+  left: 240px;
   background-color: #e9ede6;
-  border-left: 200px solid #e9ede6;
-  border-right: 200px solid #e9ede6;
+  border-left: 100px solid #e9ede6;
+  border-right: 100px solid #e9ede6;
   border-top: 20px solid #e9ede6;
   border-bottom: 20px solid #e9ede6;
   text-align: center;
